task5/tests/our-tests/output/t5.out
lli: <stdin>:36:15: error: use of undefined value '%-22099'
%t4 = add i32 %-22099, %t5
              ^

